# obj_viewer

./: CMakeLists.txt  README.md
model/akaikitsune/: mesh_texture_packed.mtl
src/: CMakeLists.txt  obj_vewer.cpp
