cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(OBJ_VIEWER)
set(VTK_DIR "/usr/local/opt/vtk/lib/cmake/vtk-9.0/")
set(Qt5_DIR "/usr/local/opt/qt5/lib/cmake/Qt5/")
find_package(VTK REQUIRED)
find_package(Qt5 COMPONENTS Core REQUIRED)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization)
include_directories(${PCL_INCLUDE_DIRS} /usr/local/Cellar/vtk/9.0.3/include/vtk-9.0/)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(obj_vewer obj_vewer.cpp)
target_link_libraries(obj_vewer ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES} ${VTK_LIBRARIES} ${Qt5Core_LIBRARIES})
